[gd_scene load_steps=11 format=2]

[ext_resource path="res://SFX/YouLost.mp3" type="AudioStream" id=1]
[ext_resource path="res://SFX/cupsSwish.mp3" type="AudioStream" id=2]
[ext_resource path="res://Tasks/Task1/EntryBackground.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/FFFFORWA.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Music/CupsTask_carnival_vibes.mp3" type="AudioStream" id=5]
[ext_resource path="res://Assets/Tasks/border.png" type="Texture" id=7]
[ext_resource path="res://Tasks/Task1/Cup.tscn" type="PackedScene" id=8]
[ext_resource path="res://Tasks/Task1/Task1.gd" type="Script" id=9]
[ext_resource path="res://SFX/win.mp3" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="Task1" type="Node2D"]
script = ExtResource( 9 )

[node name="ColorRectBack" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 387.0
margin_bottom = 219.0
color = Color( 0.498039, 0.411765, 0.686275, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 387.0
margin_bottom = 219.0
color = Color( 0.866667, 0.662745, 0.117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clock" type="Label" parent="."]
margin_left = 1.0
margin_top = 5.0
margin_right = 41.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 1 )
text = "ok"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cupsSet" type="YSort" parent="."]
scale = Vector2( 0.9, 0.9 )

[node name="Cup1" parent="cupsSet" instance=ExtResource( 8 )]
position = Vector2( 140, 108 )

[node name="Cup2" parent="cupsSet" instance=ExtResource( 8 )]
position = Vector2( 280, 108 )

[node name="Cup3" parent="cupsSet" instance=ExtResource( 8 )]
position = Vector2( 208, 62 )

[node name="Cup4" parent="cupsSet" instance=ExtResource( 8 )]
position = Vector2( 208, 160 )

[node name="startLabel" type="Label" parent="."]
margin_left = 1.0
margin_top = 98.0
margin_right = 384.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 1 )
text = "Start"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="secondTimer" type="Timer" parent="."]

[node name="coinPosition" type="Position2D" parent="."]
position = Vector2( 188, 52 )

[node name="EntryBackground" parent="." instance=ExtResource( 3 )]

[node name="win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="swipe" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="lose" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ReferenceRect" type="ReferenceRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
border_color = Color( 0.654902, 0.654902, 0.654902, 1 )
border_width = 10.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_top = -4.0
margin_right = 4.0
margin_bottom = 9.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="secondTimer" to="." method="_on_secondTimer_timeout"]
